# AABP-openclaw

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  README.md  SOUL.md  USER.md  openclaw.json  pyproject.toml  tmp_tool_payload.json  zeroclaw.config.toml.example
skills/linkedin-publish/: SKILL.md
skills/linkedin-publish/scripts/: linkedin_oauth.py  linkedin_post.py
skills/notebooklm-research/: SKILL.md
skills/tool-maker/: SKILL.md
skills/tool-maker/scripts/: base_skill_contract.py  tool_maker.py  trigger_tool_maker_skill.py
